maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: expected class or object definition
def trouverCaseN(x:Int,y:Int): Boolean ={
^JediEscaper:29: error: expected class or object definition
def trouverCaseW(x:Int,y:Int): Boolean ={
^JediEscaper:35: error: expected class or object definition
def trouverCaseS(x:Int,y:Int): Boolean ={
^JediEscaper:41: error: expected class or object definition
def trouverCaseE(x:Int,y:Int): Boolean ={
^JediEscaper:49: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:50: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:51: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:52: error: Unmatched closing brace '}' ignored here
}
^